Filling in the Assignments and Classes page

--- a/templates/Assignments.html
+++ b/templates/Assignments.html
@@ -5,7 +5,19 @@
         <title>Home</title>
     <head>
     <body>
-    
+    <ul>
+    <li>Assignent 1: </li>
+    <p>Basics in binary and pseudocode, ask and count letters in user's name, list operations</p>
+    <li>Assignent 2: </li>
+    <p>Sorting method, time complexity, simulations of projectile</p>
+    <li>Assignent 3: </li>
+    <p>Recursion, percolation</p>
+    <li>Assignent 4: </li>
+    <p>OOP</p>
+    <li>Assignent 5: </li>
+    <p>Machine learning</p>
+    <li>My favorites: the percolation programming in Assignment 3. It was fun, and somewhat like the old computer games.</li>
+    </ul>
     </body>
 </html>
 
