--- a/templates/Classes.html
+++ b/templates/Classes.html
@@ -5,7 +5,15 @@
         <title>Home</title>
     <head>
     <body>
-    
+    <p>Classes I have taken this semester:</p>
+    <ul>
+    <li>ENGIE1006_001_2020_1: INTRO TO COMP FOR ENG/APP SCI</li>
+    <li>MATHGR5030_001_2020_1: NUMERICAL METHODS IN FINANCE</li>
+    <li>MATHGR5050_001_2020_1: MATH FINANCE PRACTITIONERS SEM</li>
+    <li>MATHGR5260_001_2020_1: PROG FOR QUANT & COMP FINANCE</li>
+    <li>STATGR5265_001_2020_1: STOCHASTIC METHODS IN FINANCE</li>
+    </ul>
+    <p>My favorite: 1006 and 5260. They helped me build up my basic python skills in a short period for future application in career.</p>
     </body>
 </html>
 
