--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,16 @@
         <title>Home</title>
     <head>
     <body>
-    <p>Hello World!</p>
-    <a href="/Assignments">Visit Assignments</a>
-    <a href="/Classes">Visit Classes</a>
+    <ul>
+    <li>Name: Xinyi Wu</li>
+    <li>Photo:</li>
+    <img src="static/photo.jpg"style="width:15%;">
+    <li>Grade: 1st year master</li>
+    <li>Major: Mathematics of Finance</li>
+    <li><a href="/Assignments">Visit Assignments</a></li>
+    <li><a href="/Classes">Visit Classes</a></li>
+    <li><a href="https://www.wizardingworld.com/">Visit Wizarding World</a></li>
+    </ul>
     </body>
 </html>
 
